--- a/distridulces prueba/public/styles/header.css
+++ b/distridulces prueba/public/styles/header.css
@@ -266,76 +266,103 @@
 
 /* Estilos para el modal */
 .modal {
-  display: none;
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.5);
-}
-
-.modal {
-  width: 100%;
-  height: 100%;
-  position: fixed;
-  padding: 20px;
-  background-color: #fff;
-  border: 1px solid #ccc;
-  border-radius: 5px;
-  z-index: 1000;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  background: linear-gradient(150deg,#2874A6,#F9E79F);
+  display: flex;
+  min-height:100vh;
 }
 
 .modal-contenido {
-  background-color: #fefefe;
-  margin: 10% auto;
-  padding: 20px;
-  border: 1px solid #888;
-  width: 40%;
-  position: relative;
+  position: absolute;
+  background-color: #FFF;
+  width: 420px;
+  border-radius: 10px;
+  padding: 30px 40px;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%)
+}
+
+
+.modal-contenido h1 {
+  font-size: 36px;
   text-align: center;
-  z-index: 1000;
-  border-radius: 30px;
 }
 
-.modal-contenido h2 {
-  margin-top: 30px;
-  font-family: Poppins;
-  font-size: 40px;
-  color: #000;
+.modal-contenido .input-box {
+  width: 100%;
+  height: 50px;
+  background-color: #f2f2f2;
+  margin: 30px 0;
 }
 
-.modal-contenido h3 {
-  margin-top: 10px;
-  color: #636363;
-  font-family: Poppins;
-  font-size: 15px;
-}
-
-.modal-contenido form {
-  padding: 20px;
-  margin-top: 30px;
-}
-
-.modal-contenido input {
-  border-radius: 11px;
-  border: 1px solid #001F3F;
-  background: #FFF;
-}
-
-.modal-contenido button {
-  margin-top: 20px;
-  width: 400px;
-  height: 45px;
-  background-color: #304C78;
-  border-radius: 100px;
-  color: #FFF;
-  font-family: Poppins;
+.input-box input {
+  width: 100%;
+  height: 100%;
+  background: transparent;
+  border: none;
+  outline: none;
+  border: 2px solid rgba(255, 255, 255, .2);
   font-size: 16px;
 }
 
-.cerrar {
+.input-box input::placeholder {
+  color:  #001f3f;
+}
 
+.modal-contenido .remember-forgot {
+  display: flex;
+  justify-content: space-between;
+  font-size: 14.5px;
+  margin: -15px 0 15px;
+}
+
+.remember-forgot label input {
+  accent-color: #fff;
+  margin-right: 3px;
+}
+
+.remember-forgot a {
+  accent-color: #fff;
+  text-decoration: none;
+}
+
+.remember-forgot a:hover {
+  text-decoration: underline;
+}
+
+.modal-contenido .btn {
+  width: 100%;
+  height: 45px;
+  background-color: #2874A6;
+  color: #FFF;
+  border: none;
+  outline: none;
+  border-radius: 40px;
+  box-shadow: 0 0 10px rgba(0 , 0 , 0, .1);
+  cursor: pointer;
+  font-size: 16px;
+  font-weight: 600;
+}
+
+.modal-contenido .register-link {
+  font-size: 14.5px;
+  text-align: center;
+  margin-top: 20px;
+}
+
+.register-link p a {
+  color: #001f3f;
+  text-decoration: none;
+  font-weight: 600;
+}
+
+.register-link p a:hover{
+  text-decoration: underline;
+}
+
+
+.cerrar {
   position: absolute;
   top: 10px;
   right: 30px;
