--- a/public/styles/crud.css
+++ b/public/styles/crud.css
@@ -509,6 +509,93 @@ input[type="button"]:hover {
     font-size: 0.8em;
 }
 
+/* -------------------- agregar prosductos */
+/* ----------------------- editar productos */
+/* Estilos para el modal de edición */
+.modal-add {
+    display: none; /* Por defecto, el modal está oculto */
+    position: fixed;
+    z-index: 1000;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5); /* Fondo oscuro semi-transparente */
+    overflow: auto; /* Permite hacer scroll si es necesario */
+}
+
+/* Estilos para el contenido del modal */
+.modal-contenido {
+    background-color: #fefefe;
+    margin: 15% auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 50%;
+    max-width: 600px; /* Ancho máximo del modal */
+    border-radius: 10px;
+}
+
+/* Estilos para el botón de cerrar */
+.cerrar-modal {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+    cursor: pointer;
+}
+
+.cerrar-modal:hover,
+.cerrar-modal:focus {
+    color: black;
+    text-decoration: none;
+}
+
+/* Estilos para el formulario dentro del modal */
+.modal-contenido form {
+    display: grid;
+    gap: 10px;
+}
+
+/* Estilos para los campos de entrada en el formulario */
+.modal-contenido label {
+    font-weight: bold;
+}
+
+.modal-contenido input[type="text"],
+.modal-contenido input[type="number"],
+.modal-contenido textarea,
+.modal-contenido select {
+    width: 100%;
+    padding: 8px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+}
+
+/* Estilos para el botón de enviar en el formulario */
+.modal-contenido button[type="submit"] {
+    background-color: #4CAF50; /* Color de fondo verde */
+    color: white;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.modal-contenido button[type="submit"]:hover {
+    background-color: #45a049; /* Color de fondo verde más oscuro al pasar el mouse */
+}
+
+/* Estilos para el campo de carga de archivo */
+.modal-contenido input[type="file"] {
+    padding: 8px;
+}
+
+/* Estilos para el mensaje de error */
+.error-message {
+    color: red;
+    font-size: 0.8em;
+}
+
 
 /* --------------------------- seccion responsive ------------------------------ */
 
