--- a/public/styles/index.css
+++ b/public/styles/index.css
@@ -24,98 +24,14 @@ iframe {
   border: none; /* Para eliminar el borde del iframe */
 }
 
-/* -------------------------- nabvar ------------------------- */
-
-.navbar {
-    background: var(--navyblue, #001f3f);
-    border-radius: 10px;
-    padding: 0px 0px 0px 20px;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
-    position: absolute;
-    right: 83px;
-    left: 87px;
-    top: 113px;
-    overflow: hidden;
-    height: 45px;
-  }
-  
-  .options-navbar {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: flex-start;
-    flex-shrink: 0;
-    position: relative;
-    list-style-type: none;
-  }
-  
-  .options-navbar li {
-    color: #ffffff;
-    text-align: center;
-    font-family: "Poppins-Regular", sans-serif;
-    font-size: 13px;
-    font-weight: 400;
-    position: relative;
-  }
-  
-  .options-navbar li a {
-    display: block;
-    color: white;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-  }
-  
-  .options-navbar li a:hover {
-    color: #ffd700;
-  }
-  
-  .backgrount-search {
-    background: #ffd700;
-    padding: 20px;
-    display: flex;
-    flex-direction: row;
-    gap: 30px;
-    align-items: center;
-    justify-content: flex-start;
-    flex-shrink: 0;
-    position: relative;
-    overflow: hidden;
-  }
-  
-  .txt-search {
-    color: var(--navyblue, #001f3f);
-    text-align: left;
-    font-family: "Poppins-Medium", sans-serif;
-    font-size: 13px;
-    font-weight: 500;
-    position: relative;
-    display: flex;
-  
-  }
-  
-  .lbl-search {
-    border-radius: 30px;
-    flex-shrink: 0;
-    width: 281px;
-    height: 28px;
-    position: relative;
-    overflow: visible;
-    background-color: #ffffff;
-    text-align: center;
-    font-family: 'Arial', sans-serif;
-    border: none;
-    outline: none;
-  }
-  
-  input:focus {
-    border: none;
-    outline: none;
-    border-color: #304c78;
-    box-shadow: 0 0 5px #304c78;
-  
-  }
-  
+footer {
+  position: fixed;
+  left: 0;
+  bottom: -100px; /* Inicialmente oculto */
+  width: 100%;
+  background-color: #333;
+  color: #fff;
+  text-align: center;
+  padding: 20px 0;
+  transition: bottom 0.3s ease-in-out; /* Transición suave */
+}
