--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./vars.css" />
     <link rel="stylesheet" href="/styles/index.css" />
-    <title>Document</title>
+    <title>Distridulces</title>
 </head>
 
 <body>
@@ -15,37 +15,22 @@
         <iframe src="/pages/header.html" frameborder="0"></iframe>
     </header>
 
-    <!-- Navbar -->
-    <nav class="navbar">
-        <ul class="options-navbar">
-            <li>
-                <a href="/pages/Home.html" target="pages">Inicio</a>
-            </li>
-            <li>
-                <a href="/pages/productPage.html" target="pages">Productos</a>
-            </li>
-            <li>
-                <a href="/pages/Home.html#section-aboutus" target="pages">¿Quienes somos?</a>
-            </li>
-            <li>
-                <a href="/pages/Home.html#contacto" target="pages">Contactanos</a>
-            </li>
-        </ul>
-        <div class="backgrount-search">
-            <label for="product-search" class="txt-search">Busqueda</label>
-            <input type="text" id="product-search" name="product-search" class="lbl-search">
-        </div>
-    </nav>
-
     <main>
         <iframe name="pages" src="" frameborder="0"></iframe>
     </main>
 
-
     <!-- Footer -->
     <footer>
-        <!--<iframe src="/pages/footer.html" frameborder="0"></iframe>-->
+        <iframe src="/pages/footer.html" frameborder="0"></iframe>
     </footer>
+
+    <!-- En el documento principal -->
+<script>
+    function abrirVentanaEmergente() {
+        const modal = parent.document.getElementById('modal'); // Acceder al elemento en el documento principal
+        modal.style.display = 'block';
+    }
+</script>
 
 </body>
 
