arreglo inicio de sesion

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -14,23 +14,15 @@
     <header>
         <iframe src="/pages/header.html" frameborder="0"></iframe>
     </header>
-
+    
     <main>
         <iframe name="pages" src="" frameborder="0"></iframe>
     </main>
 
     <!-- Footer -->
     <footer>
-        <iframe src="/pages/footer.html" frameborder="0"></iframe>
+        <!-- <iframe src="/pages/footer.html" frameborder="0"></iframe> -->
     </footer>
-
-    <!-- En el documento principal -->
-<script>
-    function abrirVentanaEmergente() {
-        const modal = parent.document.getElementById('modal'); // Acceder al elemento en el documento principal
-        modal.style.display = 'block';
-    }
-</script>
 
 </body>
 
