product viculada con la bd pero aun no esta conectada con el index

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -17,6 +17,7 @@
     
     <main>
         <iframe name="pages" src="" frameborder="0"></iframe>
+        <%- include('productPage.ejs') %>L
     </main>
 
     <!-- Footer -->
