--- a/views/index.ejs
+++ b/views/index.ejs
@@ -17,12 +17,11 @@
     
     <main>
         <iframe name="pages" src="" frameborder="0"></iframe>
-        <%- include('productPage.ejs') %>L
     </main>
 
     <!-- Footer -->
     <footer>
-        <!-- <iframe src="/pages/footer.html" frameborder="0"></iframe> -->
+        <iframe src="/pages/footer.html" frameborder="0"></iframe>
     </footer>
 
 </body>
