--- a/views/productPage.ejs
+++ b/views/productPage.ejs
@@ -5,36 +5,36 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ProductPage</title>
-    <link rel="stylesheet" href="./vars.css" />
-    <link rel="stylesheet" href="/styles/productpage.css">
+    <link rel="stylesheet" href="/styles/productPage.css">
 </head>
 
 <body>
     <div class="cotenedor-productpage">
         <section class="contenido" id="contenido">
             <% Object.entries(productosPorCategoria).forEach(([categoria, productos])=> { %>
-                <h2>
-                    <%= categoria %>
-                </h2>
+                <div class="category-section">
+                    <h2>
+                        <%= categoria %>
+                    </h2>
+                </div>
+
                 <div class="mostrador" id="mostrador">
                     <% productos.forEach(producto=> { %>
                         <div class="item" onclick="cargar(this)">
-                            <img src="<%= producto.imagen %>" alt="<%= producto.nombre %>">
-                            <p class="descripcion">
+                            <div class="contenedor-foto">
+                                <img src="data:image/jpeg;base64,<%= Buffer.from(producto.imagen).toString('base64') %>" alt="<%= producto.nombre %>">
+                            </div>
+                            <p class="nombre">
                                 <%= producto.nombre %>
                             </p>
                             <span class="precio">
-                                <%= producto.descripcion %>
+                                <%= producto.precio %>
                             </span>
-                            <p>
-                                <%= producto.descripcion %>
-                            </p>
                         </div>
                         <% }); %>
                 </div>
                 <% }); %>
         </section>
-
 
         <!-- CONTENEDOR DEL ITEM SELECCIONADO -->
         <section class="seleccion" id="seleccion">
@@ -59,7 +59,7 @@
         </section>
     </div>
 
-    <script src="../js/crud.js"></script>
+    <script src="../js/productpage.js"></script>
 </body>
 
 </html>
