--- a/public/styles/index.css
+++ b/public/styles/index.css
@@ -1,33 +1,628 @@
-body, html {
+body,
+html {
   margin: 0;
   padding: 0;
   height: 100%;
 }
 
+/* ============================== header ============================== */
 header {
-    width: 100%;
-    height: 170px;
-    overflow: hidden;
+  width: 100%;
+  height: 170px;
+  overflow: hidden;
 }
+
+.header-desktop {
+  background-color: #fff;
+  padding: 0px;
+  height: 100px;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.header-mobile {
+  background-color: #fff;
+  height: 100px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  display: none;
+}
+
+.logo-mobile {
+  width: 200px;
+  height: 80px;
+  position: relative;
+  object-fit: cover;
+  float: left;
+  line-height: 80px;
+  margin-right: 40px;
+}
+
+
+.background-logo {
+  border-radius: 0px;
+  width: 474px;
+  height: 144px;
+  display: flex;
+  left: 0px;
+  top: 0px;
+  overflow: visible;
+}
+
+
+.header-info-box {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  position: absolute;
+  right: 80px;
+  left: 87px;
+  top: 0px;
+  height: 120px;
+}
+
+.sin-t-tulo-1-removebg-preview-1 {
+  flex-shrink: 0;
+  width: 223px;
+  height: 128px;
+  position: relative;
+  object-fit: cover;
+}
+
+.info-box {
+  display: flex;
+  flex-direction: row;
+  gap: 20px;
+  align-items: center;
+  justify-content: flex-end;
+  flex-shrink: 0;
+  width: 683px;
+  position: relative;
+}
+
+
+.info-adress {
+  flex-shrink: 0;
+  width: 149px;
+  height: 37px;
+  position: static;
+}
+
+.frame-61 {
+  display: flex;
+  flex-direction: row;
+  gap: 10px;
+  align-items: center;
+  justify-content: flex-start;
+  position: absolute;
+  left: -12px;
+  top: 18px;
+}
+
+.address-icon {
+  flex-shrink: 0;
+  width: 35px;
+  height: 35px;
+  position: relative;
+  object-fit: cover;
+}
+
+.frame-60 {
+  display: flex;
+  flex-direction: column;
+  gap: 0px;
+  align-items: flex-start;
+  justify-content: center;
+  flex-shrink: 0;
+  position: relative;
+}
+
+.address {
+  color: var(--navyblue, #001f3f);
+  text-align: center;
+  font-family: "Poppins-Medium", sans-serif;
+  font-size: 13px;
+  font-weight: 500;
+  position: relative;
+}
+
+._123-new-york-usa {
+  color: #808080;
+  text-align: center;
+  font-family: "Poppins-Regular", sans-serif;
+  font-size: 11px;
+  font-weight: 400;
+  position: relative;
+}
+
+.info-phone {
+  flex-shrink: 0;
+  width: 147px;
+  height: 37px;
+  position: static;
+}
+
+.frame-612 {
+  display: flex;
+  flex-direction: row;
+  gap: 10px;
+  align-items: center;
+  justify-content: flex-start;
+  position: absolute;
+  left: 157px;
+  top: 18px;
+}
+
+.phone-icon {
+  flex-shrink: 0;
+  width: 35px;
+  height: 35px;
+  position: relative;
+  object-fit: cover;
+}
+
+.phone-number {
+  color: var(--navyblue, #001f3f);
+  text-align: center;
+  font-family: "Poppins-Medium", sans-serif;
+  font-size: 13px;
+  font-weight: 500;
+  position: relative;
+}
+
+._650-123-1212 {
+  color: #808080;
+  text-align: center;
+  font-family: "Poppins-Regular", sans-serif;
+  font-size: 11px;
+  font-weight: 400;
+  position: relative;
+}
+
+.info-email {
+  flex-shrink: 0;
+  width: 169px;
+  height: 37px;
+  position: static;
+}
+
+.frame-613 {
+  display: flex;
+  flex-direction: row;
+  gap: 10px;
+  align-items: center;
+  justify-content: flex-start;
+  position: absolute;
+  left: 324px;
+  top: 18px;
+}
+
+.email-icon {
+  flex-shrink: 0;
+  width: 35px;
+  height: 35px;
+  position: relative;
+  object-fit: cover;
+}
+
+.email-us-here {
+  color: var(--navyblue, #001f3f);
+  text-align: center;
+  font-family: "Poppins-Medium", sans-serif;
+  font-size: 13px;
+  font-weight: 500;
+  position: relative;
+}
+
+.example-gmail-com {
+  color: #808080;
+  text-align: center;
+  font-family: "Poppins-Regular", sans-serif;
+  font-size: 11px;
+  font-weight: 400;
+  position: relative;
+}
+
+/* ------ login ------*/
+
+
+
+
+.login {
+  flex-shrink: 0;
+  width: 170px;
+  height: 73px;
+  position: static;
+  border-radius: 20px;
+  cursor: pointer;
+  border: 1px;
+  background-color: #f2f2f2;
+}
+
+
+.txt-iniciar-sesion {
+  color: var(--navyblue, #001f3f);
+  text-align: left;
+  font-family: "Poppins-Medium", sans-serif;
+  font-size: 13px;
+  font-weight: 500;
+  position: absolute;
+  left: 571px;
+  top: 8px;
+  width: 100px;
+}
+
+.para-administradores {
+  color: #808080;
+  text-align: left;
+  font-family: "Poppins-Regular", sans-serif;
+  font-size: 11px;
+  font-weight: 400;
+  position: absolute;
+  left: 571px;
+  top: 29px;
+  width: 100px;
+  height: 35px;
+}
+
+.user-img {
+  width: 40px;
+  height: 40px;
+  position: absolute;
+  left: 524px;
+  top: 16px;
+  object-fit: cover;
+}
+
+/* -------------------------- nabvar ------------------------- */
+
+.navbar {
+  background: var(--navyblue, #001f3f);
+  border-radius: 10px;
+  padding: 0px 0px 0px 20px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  position: absolute;
+  right: 83px;
+  left: 87px;
+  top: 113px;
+  overflow: hidden;
+  height: 45px;
+  margin-bottom: 20px;
+}
+
+.options-navbar {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: flex-start;
+  flex-shrink: 0;
+  position: relative;
+  list-style-type: none;
+}
+
+.options-navbar li {
+  color: #ffffff;
+  text-align: center;
+  font-family: "Poppins-Regular", sans-serif;
+  font-size: 13px;
+  font-weight: 400;
+  position: relative;
+}
+
+.options-navbar li a {
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+.options-navbar li a:hover {
+  color: #ffd700;
+}
+
+.backgrount-search {
+  background: #ffd700;
+  padding: 20px;
+  display: flex;
+  flex-direction: row;
+  gap: 30px;
+  align-items: center;
+  justify-content: flex-start;
+  flex-shrink: 0;
+  position: relative;
+  overflow: hidden;
+}
+
+.txt-search {
+  color: var(--navyblue, #001f3f);
+  text-align: left;
+  font-family: "Poppins-Medium", sans-serif;
+  font-size: 13px;
+  font-weight: 500;
+  position: relative;
+  display: flex;
+
+}
+
+.lbl-search {
+  border-radius: 30px;
+  flex-shrink: 0;
+  width: 281px;
+  height: 28px;
+  position: relative;
+  overflow: visible;
+  background-color: #ffffff;
+  text-align: center;
+  font-family: 'Arial', sans-serif;
+  border: none;
+  outline: none;
+}
+
+input:focus {
+  border: none;
+  outline: none;
+  border-color: #304c78;
+  box-shadow: 0 0 5px #304c78;
+
+}
+
+/* Estilos para el modal */
+.modal {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+}
+
+/* ============================== contenido ============================== */
 
 main {
   width: 100%;
-  height: 100vh; /* El 100% del viewport height */
+  height: 100vh;
+  /* El 100% del viewport height */
   display: flex;
   justify-content: center;
   align-items: center;
 }
+
 iframe {
   width: 100%;
   height: 100%;
-  border: none; /* Para eliminar el borde del iframe */
+  border: none;
+  /* Para eliminar el borde del iframe */
 }
 
-footer {
-  background-color: #222; /* Cambia el color de fondo según tu preferencia */
+
+/* ============================== footer ============================== */
+
+.footer {
+  box-sizing: border-box;
+  height: 305px;
+  position: relative;
+  background-color: #808080;
   color: #fff;
   text-align: center;
-  padding: 20px 0; /* Ajusta el espacio entre los elementos del footer */
-  bottom: 0;
+  padding: 10px 0;
   width: 100%;
+  bottom: 0;
+}
+
+.social-icons {
+  width: 50px;
+  height: 50px;
+  position: absolute;
+  left: calc(50% - -228.5px);
+  bottom: 207px;
+  object-fit: cover;
+}
+
+.txt-futer {
+  position: absolute;
+  inset: 0;
+}
+
+.txt-copy {
+  color: #ffffff;
+  text-align: center;
+  font-family: "Inter-SemiBold", sans-serif;
+  font-size: 20px;
+  line-height: 130%;
+  font-weight: 600;
+  position: absolute;
+  left: calc(50% - 152.5px);
+  bottom: 56px;
+  width: 305px;
+  height: 25px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.txt-footers {
+  color: #ffffff;
+  text-align: center;
+  font-family: "Inter-Regular", sans-serif;
+  font-size: 16px;
+  font-weight: 400;
+  position: absolute;
+  left: calc(50% - 4%);
+  bottom: 275px;
+  width: 101px;
+  height: 14px;
+  line-height: 140%;
+}
+
+.txt-footers a {
+  color: #ffffff;
+  text-decoration: none;
+}
+
+.txt-footers a:visited {
+  color: #fff;
+}
+
+.img-logo {
+  width: 183px;
+  height: 183px;
+  position: absolute;
+  left: calc(50% - 411.5px);
+  bottom: 81px;
+  object-fit: cover;
+}
+
+/* --------------------------- seccion responsive ------------------------------ */
+
+.mostrar-menu,
+.esconder-menu {
+  font-size: 70px;
+  cursor: pointer;
+  transition: 0.4s;
+  float: right;
+  line-height: 80px;
+  margin-right: 40px;
+  display: flex;
+}
+
+.mostrar-menu {
+  order: 1;
+}
+
+.mostrar-menu:hover,
+.esconder-menu:hover {
+  color: #ffd700;
+}
+
+#check {
+  display: none;
+}
+
+@media (max-width:720px) {
+
+  .header-desktop {
+    display: none;
+  }
+
+  .header-mobile {
+    display: block;
+  }
+
+  .navbar-mobile {
+    position: fixed;
+    width: 100%;
+    height: 140vh;
+    background: #fff;
+    right: -100%;
+    top: 0;
+    text-align: left;
+    padding: 100px 0px;
+    z-index: 100;
+    transition: 0.8s;
+  }
+
+  .navbar-mobile a {
+    display: block;
+    padding: 20px;
+    color: #001f3f;
+    text-decoration: none;
+  }
+
+  .navbar-mobile button {
+    position: relative;
+    left: 60px;
+    margin-top: 40px;
+    margin-bottom: 40px;
+    width: 400px;
+    height: 45px;
+    background-color: #304C78;
+    border-radius: 100px;
+    color: #FFF;
+    font-family: Poppins;
+    font-size: 16px;
+  }
+
+  .navbar-mobile a:hover {
+    color: #ffd700;
+  }
+
+  .esconder-menu {
+    position: absolute;
+    top: 20px;
+    right: 0px;
+  }
+
+  .logo-mobile-navbar {
+    width: 200px;
+    height: 80px;
+    position: absolute;
+    object-fit: cover;
+    float: left;
+    top: 20px;
+  }
+
+  .info-box-mobile {
+    display: flex;
+    flex-direction: row;
+    gap: 20px;
+    align-items: center;
+    justify-content: flex-end;
+    flex-shrink: 0;
+    width: 683px;
+    left: 20px;
+    position: relative;
+  }
+
+
+  #check:checked~.navbar-mobile {
+    right: 0;
+  }
+
+  .footer {
+    box-sizing: border-box;
+    width: 100%;
+    position: relative;
+  }
+
+  .img-logo {
+    width: 100px;
+    height: 100px;
+    position: absolute;
+    left: calc(50% - 100px);
+    bottom: 185px;
+    object-fit: cover;
+  }
+
+  .social-icons {
+    width: 30px;
+    height: 30px;
+    display: flex;
+    position: absolute;
+    left: calc(50% - 85px);
+    bottom: 100px;
+    object-fit: cover;
+    margin-bottom: 20px;
+  }
+
+  .txt-footers {
+    color: #ffffff;
+    text-align: left;
+    font-family: "Inter-Regular", sans-serif;
+    font-size: 14px;
+    font-weight: 400;
+    position: absolute;
+    left: calc(50% - -25.5px);
+    bottom: 275px;
+    width: 101px;
+    height: 14px;
+  }
 }
