--- a/views/crud.ejs
+++ b/views/crud.ejs
@@ -57,22 +57,23 @@
             <div class="modal-contenido">
                 <span id="cerrar-modal" class="cerrar-modal">&times;</span>
                 <h3>Agregar Producto</h3>
-                <form action="" method="POST" id="agregar-formulario">
-                    <label for="nombre">Nombre:</label>
-                    <input type="text" id="nombre-add" name="nombre" required>
+                <form action="/agregarProducto" method="POST" id="agregar-formulario">
+                    <label for="nombre-add">Nombre:</label>
+                    <input type="text" id="nombre-add" name="nombre-add" required>
 
-                    <label for="descripcion">Descripción:</label>
-                    <textarea id="descripcion-add" name="descripcion" required></textarea>
+                    <label for="descripcion-add">Descripción:</label>
+                    <textarea id="descripcion-add" name="descripcion-add" required></textarea>
 
-                    <label for="precio">Precio:</label>
-                    <input type="number" id="precio-add" name="precio" required>
+                    <label for="precio-add">Precio:</label>
+                    <input type="number" id="precio-add" name="precio-add" required>
 
-                    <label for="categoria">Categoría:</label>
-                    <select id="categoria-add" name="categoria" required>
+                    <label for="categoria-add">Categoría:</label>
+                    <select id="categoria-add" name="categoria-add" >
+                        <option value="1">1</option>
                     </select>
 
-                    <label for="imagen">Cargar archivo tipo PNG:</label>
-                    <input type="file" id="imagen-add" name="imagen" accept=".png">
+                    <label for="imagen-add">Cargar archivo tipo PNG:</label>
+                    <input type="file" id="imagen-add" name="imagen-add" accept=".png">
 
                     <button type="submit">Guardar Cambios</button>
                 </form>
@@ -97,7 +98,6 @@
 
                     <label for="categoria">Categoría:</label>
                     <select id="categoria-edit" name="categoria" required>
-                        <!-- Opciones de categoría -->
                     </select>
 
                     <label for="imagen">Cargar archivo tipo PNG:</label>
