--- a/views/productPage.ejs
+++ b/views/productPage.ejs
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ProductPage</title>
+    <title>DistridulcesdelEje-Productos</title>
     <link rel="stylesheet" href="resources/styles/productPage.css">
 </head>
 
