--- a/public/styles/crud.css
+++ b/public/styles/crud.css
@@ -21,13 +21,14 @@ body {
 }
 
 .contenido {
-    max-width: 1200px;
+    max-width: 1100px;
     width: 100%;
-    margin: 40px auto;
+    margin: 10px auto;
 }
 
 /* --------------------------------------------------- */
 .category-section {
+    width: 100%;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -61,7 +62,6 @@ body {
     width: 30px;
     height: auto;
     position: relative;
-
 }
 
 
@@ -78,13 +78,18 @@ body {
 .mostrador {
     width: 100%;
     display: flex;
-    justify-content: space-between;
-    text-align: left;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+    /* Alineación de izquierda a derecha */
+    gap: 10px;
+    /* Espacio entre los productos */
     margin-bottom: 40px;
-    transition: .5s ease;
 }
 
 .item {
+
+    flex: 1 0 200px;
+    /* Ancho fijo de 200px */
     max-width: 210px;
     padding: 10px;
     width: 189px;
@@ -98,9 +103,9 @@ body {
     display: grid;
     text-align: center;
     display: inline-block;
-  /* Para que las cards se muestren en línea */
-  vertical-align: top;
-  /* Para alinear las cards en la parte superior */
+    /* Para que las cards se muestren en línea */
+    vertical-align: top;
+    /* Para alinear las cards en la parte superior */
 }
 
 
@@ -144,14 +149,10 @@ body {
 /* --------------------------------------------------- */
 
 .seleccion {
+    position: relative;
     transition: .5s ease;
     opacity: 0;
     border: 1px solid #ccc;
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    overflow: hidden;
     border-radius: 24px;
 }
 
@@ -165,16 +166,36 @@ body {
 
 .info {
     padding: 20px;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    /* Mostrar como flex */
+    flex-direction: column;
+    /* Orientación de columnas */
+    align-items: center;
+    /* Centrar elementos horizontalmente */
+    justify-content: center;
+    /* Centrar elementos verticalmente */
+    align-items: flex-start;
 }
 
-.info img {
-    display: block;
-    margin: 30px auto;
-    width: 80px;
+.info .contenedor_img {
+    width: 100%;
+    height: 50%; /* Altura ajustable según tus necesidades */
 }
 
+.info .contenedor_img img {
+    width: 100%;
+    height: 100%; /* Ajusta la altura al 100% del contenedor_img */
+    object-fit: contain; /* Hace que la imagen se ajuste dentro del contenedor_img sin recortar */
+}
+
+.info .contenedor_detalles {
+    margin-left: 20px;
+}
 .info h2 {
     color: #707070;
+    font-size: 50px;
     margin-bottom: 10px;
 }
 
@@ -192,57 +213,6 @@ body {
     display: block;
 }
 
-.info {
-    display: flex;
-    align-items: flex-end;
-}
-
-.info label {
-    display: block;
-    margin-bottom: 10px;
-}
-
-.info input {
-    width: 100px;
-    font-size: 18px;
-    padding: 6px;
-    margin-right: 30px;
-}
-
-.info button {
-    height: 40px;
-    border: none;
-    padding: 0 10px;
-    color: #fff;
-    background-color: #2b6be7;
-    cursor: pointer;
-    border-radius: 15px;
-    visibility: hidden;
-}
-
-.info button:hover {
-    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.4);
-}
-
-.size {
-    display: flex;
-    flex-direction: column;
-    margin-bottom: 10px;
-    visibility: hidden;
-}
-
-.size label {
-    margin-bottom: 5px;
-}
-
-.size input {
-    border-radius: 8px;
-    /* Ajusta el valor según tu preferencia */
-    padding: 8px;
-    border: 1px solid #ccc;
-    outline: none;
-    /* Elimina el contorno al hacer clic */
-}
 
 .btn-agg-seccion {
     display: flex;
@@ -250,448 +220,3 @@ body {
     justify-content: center;
 }
 
-/* Estilos para el modal */
-.modal-edit {
-    display: none;
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.5);
-}
-
-.modal-edit {
-    width: 100%;
-    height: 100%;
-    position: fixed;
-    padding: 20px;
-    background-color: #fff;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    z-index: 1000;
-}
-
-.modal-delete {
-    display: none;
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.5);
-}
-
-.modal-delete {
-    width: 100%;
-    height: 100%;
-    position: fixed;
-    padding: 20px;
-    background-color: #fff;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    z-index: 1000;
-}
-
-.modal-contenido {
-    background-color: #fefefe;
-    margin: 10% auto;
-    padding: 20px;
-    border: 1px solid #888;
-    width: 40%;
-    position: relative;
-    text-align: center;
-    z-index: 1000;
-    border-radius: 30px;
-}
-
-.modal-contenido h2 {
-    margin-top: 30px;
-    font-family: Poppins;
-    font-size: 40px;
-    color: #000;
-}
-
-.modal-contenido h3 {
-    margin-top: 10px;
-    color: #636363;
-    font-family: Poppins;
-    font-size: 15px;
-}
-
-.modal-contenido form {
-    padding: 20px;
-    margin-top: 30px;
-}
-
-.modal-contenido input {
-    border-radius: 11px;
-    border: 1px solid #001F3F;
-    background: #FFF;
-}
-
-.modal-contenido button {
-    margin-top: 20px;
-    width: 400px;
-    height: 45px;
-    background-color: #304C78;
-    border-radius: 100px;
-    color: #FFF;
-    font-family: Poppins;
-    font-size: 16px;
-}
-
-.cerrar {
-
-    position: absolute;
-    top: 10px;
-    right: 30px;
-    font-size: 40px;
-    cursor: pointer;
-}
-
-/* ------------------------- eliminar producto */
-/* Estilos para el modal de confirmación */
-.modal-delete {
-    display: none;
-    /* Por defecto, el modal está oculto */
-    position: fixed;
-    z-index: 1000;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.5);
-    /* Fondo oscuro semi-transparente */
-    overflow: auto;
-    /* Permite hacer scroll si es necesario */
-}
-
-/* Estilos para el contenido del modal */
-.modal-contenido {
-    background-color: #fefefe;
-    margin: 15% auto;
-    padding: 20px;
-    border: 1px solid #888;
-    width: 25%;
-    border-radius: 10px;
-}
-
-/* Estilos para el botón de cerrar */
-.cerrar-modal {
-    color: #aaa;
-    float: right;
-    font-size: 28px;
-    font-weight: bold;
-}
-
-.cerrar-modal:hover,
-.cerrar-modal:focus {
-    color: black;
-    text-decoration: none;
-    cursor: pointer;
-}
-
-/* Estilos para los botones de confirmación */
-input[type="button"] {
-    background-color: #4CAF50;
-    /* Color de fondo verde */
-    color: white;
-    padding: 10px 20px;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    margin-right: 10px;
-    /* Margen derecho entre botones */
-    outline: none;
-    /* Quita el borde de enfoque */
-}
-
-input[type="button"]:hover {
-    background-color: #45a049;
-    /* Color de fondo verde más oscuro al pasar el mouse */
-}
-
-/* Estilos para el botón de "No" */
-#btn-no {
-    background-color: #f44336;
-    /* Color de fondo rojo */
-}
-
-#btn-no:hover {
-    background-color: #d32f2f;
-    /* Color de fondo rojo más oscuro al pasa*/
-}
-
-/* ----------------------- editar productos */
-/* Estilos para el modal de edición */
-.modal-edit {
-    display: none;
-    /* Por defecto, el modal está oculto */
-    position: fixed;
-    z-index: 1000;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.5);
-    /* Fondo oscuro semi-transparente */
-    overflow: auto;
-    /* Permite hacer scroll si es necesario */
-}
-
-/* Estilos para el contenido del modal */
-.modal-contenido {
-    background-color: #fefefe;
-    margin: 15% auto;
-    padding: 20px;
-    border: 1px solid #888;
-    width: 50%;
-    max-width: 600px;
-    /* Ancho máximo del modal */
-    border-radius: 10px;
-}
-
-/* Estilos para el botón de cerrar */
-.cerrar-modal {
-    color: #aaa;
-    float: right;
-    font-size: 28px;
-    font-weight: bold;
-    cursor: pointer;
-}
-
-.cerrar-modal:hover,
-.cerrar-modal:focus {
-    color: black;
-    text-decoration: none;
-}
-
-/* Estilos para el formulario dentro del modal */
-.modal-contenido form {
-    display: grid;
-    gap: 10px;
-}
-
-/* Estilos para los campos de entrada en el formulario */
-.modal-contenido label {
-    font-weight: bold;
-}
-
-.modal-contenido input[type="text"],
-.modal-contenido input[type="number"],
-.modal-contenido textarea,
-.modal-contenido select {
-    width: 100%;
-    padding: 8px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-}
-
-/* Estilos para el botón de enviar en el formulario */
-.modal-contenido button[type="submit"] {
-    background-color: #4CAF50;
-    /* Color de fondo verde */
-    color: white;
-    padding: 10px 20px;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-}
-
-.modal-contenido button[type="submit"]:hover {
-    background-color: #45a049;
-    /* Color de fondo verde más oscuro al pasar el mouse */
-}
-
-/* Estilos para el campo de carga de archivo */
-.modal-contenido input[type="file"] {
-    padding: 8px;
-}
-
-/* Estilos para el mensaje de error */
-.error-message {
-    color: red;
-    font-size: 0.8em;
-}
-
-/* -------------------- agregar prosductos */
-/* ----------------------- editar productos */
-/* Estilos para el modal de edición */
-.modal-add {
-    display: none;
-    /* Por defecto, el modal está oculto */
-    position: fixed;
-    z-index: 1000;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.5);
-    /* Fondo oscuro semi-transparente */
-    overflow: auto;
-    /* Permite hacer scroll si es necesario */
-}
-
-/* Estilos para el contenido del modal */
-.modal-contenido {
-    background-color: #fefefe;
-    margin: 15% auto;
-    padding: 20px;
-    border: 1px solid #888;
-    width: 50%;
-    max-width: 600px;
-    /* Ancho máximo del modal */
-    border-radius: 10px;
-}
-
-/* Estilos para el botón de cerrar */
-.cerrar-modal {
-    color: #aaa;
-    float: right;
-    font-size: 28px;
-    font-weight: bold;
-    cursor: pointer;
-}
-
-.cerrar-modal:hover,
-.cerrar-modal:focus {
-    color: black;
-    text-decoration: none;
-}
-
-/* Estilos para el formulario dentro del modal */
-.modal-contenido form {
-    display: grid;
-    gap: 10px;
-}
-
-/* Estilos para los campos de entrada en el formulario */
-.modal-contenido label {
-    font-weight: bold;
-}
-
-.modal-contenido input[type="text"],
-.modal-contenido input[type="number"],
-.modal-contenido textarea,
-.modal-contenido select {
-    width: 100%;
-    padding: 8px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-}
-
-/* Estilos para el botón de enviar en el formulario */
-.modal-contenido button[type="submit"] {
-    background-color: #4CAF50;
-    /* Color de fondo verde */
-    color: white;
-    padding: 10px 20px;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-}
-
-.modal-contenido button[type="submit"]:hover {
-    background-color: #45a049;
-    /* Color de fondo verde más oscuro al pasar el mouse */
-}
-
-/* Estilos para el campo de carga de archivo */
-.modal-contenido input[type="file"] {
-    padding: 8px;
-}
-
-/* Estilos para el mensaje de error */
-.error-message {
-    color: red;
-    font-size: 0.8em;
-}
-
-
-/* --------------------------- seccion responsive ------------------------------ */
-
-.seleccion-mobile {
-    display: none;
-}
-
-.mostrar-detalle-producto,
-.esconder-detalle-producto {
-    cursor: pointer;
-    transition: 0.4s;
-}
-
-.mostrar-detalle-producto:hover,
-.esconder-detalle-producto:hover {
-    color: #ffd700;
-}
-
-#checki {
-    display: none;
-}
-
-
-@media (max-width:720px) {
-
-
-    .seleccion-mobile {
-        display: block;
-    }
-
-    .seleccion {
-        display: none;
-    }
-
-    .category-section {
-        display: flex;
-        width: 100%;
-        font-size: 10px;
-        justify-content: space-between;
-        align-items: center;
-        border-bottom: 2px solid #ccc;
-        margin-bottom: 20px;
-    }
-
-    .category-section h2 {
-        font-family: "Merge One";
-        font-size: 30px;
-    }
-
-
-    .mostrar-detalle-producto,
-    .esconder-detalle-producto {
-        display: block;
-    }
-
-    .seleccion-mobile {
-        position: fixed;
-        width: 100%;
-        height: 100vh;
-        background: #fff;
-        right: -100%;
-        top: 0;
-        text-align: center;
-        padding: 100px 0px;
-        z-index: 100;
-        transition: 0.8s;
-    }
-
-    .esconder-detalle-producto {
-        position: absolute;
-        top: 20px;
-        right: 40px;
-        font-size: 70px;
-    }
-
-    #checki:checked~.seleccion-mobile {
-        right: 0;
-        display: grid;
-        grid-template-columns: 1fr 1fr;
-        gap: 1rem;
-    }
-
-    .modal-contenido {
-        width: 35%;
-    }
-
-}
