--- a/public/styles/productPage.css
+++ b/public/styles/productPage.css
@@ -3,7 +3,6 @@ body {
     width: 100%;
     height: auto;
     position: relative;
-    display: flex;
 }
 
 /* ------------------------------------------ */
@@ -22,13 +21,14 @@ body {
 }
 
 .contenido {
-    max-width: 1200px;
+    max-width: 1100px;
     width: 100%;
-    margin: 40px auto;
+    margin: 10px auto;
 }
 
 /* --------------------------------------------------- */
 .category-section {
+    width: 100%;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -43,35 +43,24 @@ body {
     margin: 0;
 }
 
-.category-buttons {
-    display: flex;
-    gap: 10px;
-    /* Espacio entre los elementos hijos */
-}
-
-.category-buttons label {
-    margin-right: 5px;
-    /* Espacio entre las etiquetas y los <select> */
-}
-
-.category-buttons select {
-    border: none;
-    /* Elimina el borde predeterminado de los <select> */
-    padding: 5px;
-    /* Añade un poco de relleno a los <select> para mejorar la apariencia */
-}
-
-
 /* --------------------------------------------------- */
+
 
 .mostrador {
     width: 100%;
     display: flex;
-    margin-bottom: 20px;
-    transition: .5s ease;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+    /* Alineación de izquierda a derecha */
+    gap: 10px;
+    /* Espacio entre los productos */
+    margin-bottom: 40px;
 }
 
-.mostrador .item {
+.item {
+
+    flex: 1 0 200px;
+    /* Ancho fijo de 200px */
     max-width: 210px;
     padding: 10px;
     width: 189px;
@@ -79,57 +68,57 @@ body {
     border-radius: 24px;
     text-align: center;
     margin: 0 10px;
-    cursor: pointer;
     border: 1px;
     border-style: solid;
     border-color: #2b6be7;
     display: grid;
     text-align: center;
+    display: inline-block;
+    /* Para que las cards se muestren en línea */
+    vertical-align: top;
+    /* Para alinear las cards en la parte superior */
 }
 
 
-.mostrador .item:hover {
-    background-color: #e6e6e6;
-}
-
-.mostrador .item .contenedor-foto {
+.item .contenedor-foto {
     width: 100%;
-    height: 50%;
-    overflow: hidden;
+    height: 50%; 
 }
 
-.mostrador .item .contenedor-foto img {
+.item .contenedor-foto img {
     width: 100%;
     height: 100%;
-    object-fit: cover;
+    object-fit: contain; /* Hace que la imagen se ajuste dentro del contenedor_img sin recortar */
 }
 
-.mostrador .item .nombre {
+.item .contenedor-texto {
+    margin-top: 30px;
+    width: 100%;
+    height: 100%;
+}
+
+.item .nombre {
     color: #707070;
     font-family: "Inter-SemiBold", sans-serif;
     font-size: 16px;
     font-weight: bold;
 }
 
-.mostrador .item .precio {
+.item .precio {
     color: #2b6be7;
     font-family: "Inter-SemiBold", sans-serif;
     font-weight: bold;
     font-size: 20px;
+    margin-top: 30px;
 }
-
 
 /* --------------------------------------------------- */
 
 .seleccion {
+    position: relative;
     transition: .5s ease;
     opacity: 0;
     border: 1px solid #ccc;
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    overflow: hidden;
     border-radius: 24px;
 }
 
@@ -143,16 +132,36 @@ body {
 
 .info {
     padding: 20px;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    /* Mostrar como flex */
+    flex-direction: column;
+    /* Orientación de columnas */
+    align-items: center;
+    /* Centrar elementos horizontalmente */
+    justify-content: center;
+    /* Centrar elementos verticalmente */
+    align-items: flex-start;
 }
 
-.info img {
-    display: block;
-    margin: 30px auto;
-    width: 80%;
+.info .contenedor_img {
+    width: 100%;
+    height: 50%; 
 }
 
+.info .contenedor_img img {
+    width: 100%;
+    height: 100%; /* Ajusta la altura al 100% del contenedor_img */
+    object-fit: contain; /* Hace que la imagen se ajuste dentro del contenedor_img sin recortar */
+}
+
+.info .contenedor_detalles {
+    margin-left: 20px;
+}
 .info h2 {
     color: #707070;
+    font-size: 50px;
     margin-bottom: 10px;
 }
 
@@ -170,141 +179,10 @@ body {
     display: block;
 }
 
-.info {
+
+.btn-agg-seccion {
     display: flex;
-    align-items: flex-end;
+    align-items: center;
+    justify-content: center;
 }
 
-.info label {
-    display: block;
-    margin-bottom: 10px;
-}
-
-.info input {
-    width: 100px;
-    font-size: 18px;
-    padding: 6px;
-    margin-right: 30px;
-}
-
-.info button {
-    height: 40px;
-    border: none;
-    padding: 0 10px;
-    color: #fff;
-    background-color: #2b6be7;
-    cursor: pointer;
-    border-radius: 15px;
-    visibility: hidden;
-}
-
-.info button:hover {
-    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.4);
-}
-
-.size {
-    display: flex;
-    flex-direction: column;
-    margin-bottom: 10px;
-    visibility: hidden;
-}
-
-.size label {
-    margin-bottom: 5px;
-}
-
-.size input {
-    border-radius: 8px;
-    /* Ajusta el valor según tu preferencia */
-    padding: 8px;
-    border: 1px solid #ccc;
-    outline: none;
-    /* Elimina el contorno al hacer clic */
-}
-
-/* --------------------------- seccion responsive ------------------------------ */
-
-.seleccion-mobile {
-    display: none;
-}
-
-.mostrar-detalle-producto,
-.esconder-detalle-producto {
-    cursor: pointer;
-    transition: 0.4s;
-}
-
-.mostrar-detalle-producto:hover,
-.esconder-detalle-producto:hover {
-    color: #ffd700;
-}
-
-#checki {
-    display: none;
-}
-
-
-@media (max-width:720px) {
-
-
-    .seleccion-mobile {
-        display: block;
-    }
-
-    .seleccion {
-        display: none;
-    }
-
-    .category-section {
-        display: flex;
-        width: 100%;
-        font-size: 10px;
-        justify-content: space-between;
-        align-items: center;
-        border-bottom: 2px solid #ccc;
-        margin-bottom: 20px;
-    }
-
-    .category-section h2 {
-        font-family: "Merge One";
-        font-size: 30px;
-    }
-
-
-    .mostrar-detalle-producto,
-    .esconder-detalle-producto {
-        display: block;
-    }
-
-    .seleccion-mobile {
-        position: fixed;
-        width: 100%;
-        height: 100vh;
-        background: #fff;
-        right: -100%;
-        top: 0;
-        text-align: center;
-        padding: 100px 0px;
-        z-index: 100;
-        transition: 0.8s;
-    }
-
-    .esconder-detalle-producto {
-        position: absolute;
-        top: 20px;
-        right: 40px;
-        font-size: 70px;
-    }
-
-    #checki:checked~.seleccion-mobile {
-        right: 0;
-    }
-
-    .mostrador {
-        display: grid;
-        grid-template-columns: 1fr 1fr;
-        gap: 1rem;
-    }
-
-
-}
