--- a/views/productPage.ejs
+++ b/views/productPage.ejs
@@ -4,64 +4,63 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DistridulcesdelEje-Productos</title>
+    <title>Crud</title>
     <link rel="stylesheet" href="resources/styles/productPage.css">
 </head>
 
 <body>
     <div class="cotenedor-productpage">
+
         <section class="contenido" id="contenido">
             <% Object.entries(productosPorCategoria).forEach(([categoria, productos])=> { %>
                 <div class="category-section">
                     <h2>
                         <%= categoria %>
                     </h2>
+                    
                 </div>
 
                 <div class="mostrador" id="mostrador">
                     <% productos.forEach(producto=> { %>
-                        <div class="item" onclick="cargar(this)">
+                        <div class="item"
+                            onclick="cargar(this, '<%= producto.nombre %>','<%= producto.descripcion %>','<%= producto.precio %>')">
                             <div class="contenedor-foto">
                                 <img src="data:image/jpeg;base64,<%= Buffer.from(producto.imagen).toString('base64') %>"
                                     alt="<%= producto.nombre %>">
                             </div>
-                            <p class="nombre">
-                                <%= producto.nombre %>
-                            </p>
-                            <span class="precio">
-                                <%= producto.precio %>
-                            </span>
+                            <div class="contenedor-texto">
+                                <p class="nombre">
+                                    <%= producto.nombre %>
+                                </p>
+                                <span class="precio">
+                                    $<%= producto.precio %>
+                                </span>
+                            </div>
                         </div>
                         <% }); %>
                 </div>
                 <% }); %>
-
-
         </section>
+
         <!-- CONTENEDOR DEL ITEM SELECCIONADO -->
         <div class="seleccion" id="seleccion">
             <div class="cerrar" onclick="cerrar()">
                 &#x2715
             </div>
             <div class="info">
-                <img src="img/1.png" alt="" id="img">
-                <h2 id="modelo">titulo</h2>
-                <p id="descripcion">descrtipcion</p>
-
-                <span class="precio" id="precio">$12345</span>
-
-                <div class="fila">
-                    <div class="size">
-                        <label for="">Cantidad</label>
-                        <input type="number" min="0">
-                    </div>
-                    <button>AGREGAR AL CARRITO</button>
+                <div class="contenedor_img"><img src="" alt="" id="img"></div>
+                <div class="contenedor_detalles">
+                    <h2 id="nombre"></h2>
+                    <p id="descripcion"></p>
+                    <span class="precio" id="precio"></span>
                 </div>
             </div>
         </div>
-    </div>
+        </section>
 
-    <script src="resources/js/productpage.js"></script>
+    </div>
+</body>
+<script src="resources/js/productPage.js"></script>
 </body>
 
 </html>
