--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,144 +1,153 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DistridulcesdelEje</title>
-    <link rel="stylesheet" href="resources/styles/stylehome.css">
-</head>
-<body>
-    <div class="header-desktop">
-        <svg class="background-logo" width="474" height="144" viewBox="0 0 474 144" fill="none"
-            xmlns="http://www.w3.org/2000/svg">
-            <path
-                d="M0 0H474L456.883 11.3123C442.125 21.0648 431.486 35.9202 427.004 53.0315C422.49 70.2642 411.733 85.2044 396.821 94.9507L374.768 109.365C357.782 120.467 338.587 127.744 318.51 130.691L266.271 138.361L0 144V0Z"
-                fill="#304C78" />
-        </svg>
-        <div class="header-info-box">
-            <img class="sin-t-tulo-1-removebg-preview-1" src="resources/img/header/logo.png" />
-            <div class="info-box">
-                <div class="info-adress">
-                    <div class="frame-61">
-                        <img class="address-icon" src="resources/img/header/address-icon0.png" />
-                        <div class="frame-60">
-                            <div class="address">Address</div>
-                            <div class="_123-new-york-usa">123, New York, USA</div>
-                        </div>
-                    </div>
-                </div>
-                <div class="info-phone">
-                    <div class="frame-612">
-                        <img class="phone-icon" src="resources/img/header/phone-icon0.png" />
-                        <div class="frame-60">
-                            <div class="phone-number">Phone Number</div>
-                            <div class="_650-123-1212">(650) 123-1212</div>
-                        </div>
-                    </div>
-                </div>
-                <div class="info-email">
-                    <div class="frame-613">
-                        <img class="email-icon" src="resources/img/header/email-icon0.png" />
-                        <div class="frame-60">
-                            <div class="email-us-here">Email Us Here</div>
-                            <div class="example-gmail-com">example@gmail.com</div>
-                        </div>
-                    </div>
-                </div>
-                <% if (login) { %>
-                    <a href="logout" class="a-logout">
-                        <div class="txt-cerrar-sesion">Hola! <%= name %> <br><br> <strong style="color:#001f3f;">Cerrar sesion</strong></div>
-                        <img class="user-img" src="resources/img/header/user.png" />
-                    </a>
-                <% } else { %>
-                    <h1><strong><%= name %></strong></h1>
-                    <a href="login" class="a-logout">
-                        <div class="txt-iniciar-sesion"><strong style="color:#001f3f;">Iniciar Sesion</strong></div>
-                        <img class="user-img" src="resources/img/header/user.png" />
-                    </a>
-                <% } %>
-            </div>
-        </div>
 
-        <!-- Navbar -->
-        <nav class="navbar">
-            <ul class="options-navbar">
-                <li>
-                    <a href="/" target="pages">Inicio</a>
-                </li>
-                <li>
-                    <a href="http://localhost:3000/productPage" target="pages">Productos</a>
-                </li>
-                <li>
-                    <a href="http://localhost:3000/crud" target="pages">¿Quienes somos?</a>
-                </li>
-                <li>
-                    <a href="resources/pages/home.html#contacto" target="pages">Contactanos</a>
-                </li>
-            </ul>
-            <div class="backgrount-search">
-                <label for="product-search" class="txt-search">Busqueda</label>
-                <input type="text" id="product-search" name="product-search" class="lbl-search">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>DistridulcesdelEje</title>
+  <link rel="stylesheet" href="resources/styles/stylehome.css">
+</head>
+
+<body>
+
+  <div class="header-desktop">
+    <svg class="background-logo" width="474" height="144" viewBox="0 0 474 144" fill="none"
+      xmlns="http://www.w3.org/2000/svg">
+      <path
+        d="M0 0H474L456.883 11.3123C442.125 21.0648 431.486 35.9202 427.004 53.0315C422.49 70.2642 411.733 85.2044 396.821 94.9507L374.768 109.365C357.782 120.467 338.587 127.744 318.51 130.691L266.271 138.361L0 144V0Z"
+        fill="#304C78" />
+    </svg>
+    <div class="header-info-box">
+      <img class="sin-t-tulo-1-removebg-preview-1" src="resources/img/header/logo.png" />
+      <div class="info-box">
+        <div class="info-adress">
+          <div class="frame-61">
+            <img class="address-icon" src="resources/img/header/address-icon0.png" />
+            <div class="frame-60">
+              <div class="address">Address</div>
+              <div class="_123-new-york-usa">123, New York, USA</div>
             </div>
-        </nav>
+          </div>
+        </div>
+        <div class="info-phone">
+          <div class="frame-612">
+            <img class="phone-icon" src="resources/img/header/phone-icon0.png" />
+            <div class="frame-60">
+              <div class="phone-number">Phone Number</div>
+              <div class="_650-123-1212">(650) 123-1212</div>
+            </div>
+          </div>
+        </div>
+        <div class="info-email">
+          <div class="frame-613">
+            <img class="email-icon" src="resources/img/header/email-icon0.png" />
+            <div class="frame-60">
+              <div class="email-us-here">Email Us Here</div>
+              <div class="example-gmail-com">example@gmail.com</div>
+            </div>
+          </div>
+        </div>
+          <% if (login) { %>
+            <a href="logout" class="a-logout">
+                <div class="txt-cerrar-sesion">Hola! <%= name %> <br><br> <strong style="color:#001f3f;">Cerrar sesion</strong></div>
+                <img class="user-img" src="resources/img/header/user.png" />
+            </a>
+        <% } else { %>
+            <h1><strong><%= name %></strong></h1>
+            <a href="login" class="a-logout">
+                <div class="txt-iniciar-sesion"><strong style="color:#001f3f;">Iniciar Sesion</strong></div>
+                <img class="user-img" src="resources/img/header/user.png" />
+            </a>
+        <% } %>
+      </div>
     </div>
 
-    <div class="header-mobile">
-        <img class="logo-mobile" src="resources/img/header/img-logo-mobile.png" />
-        <input type="checkbox" id="check">
-        <label for="check" class="mostrar-menu">
-            &#8801
-        </label>
+    
 
-        <nav class="navbar-mobile">
-            <img class="logo-mobile-navbar" src="resources/img/header/img-logo-mobile.png" />
-            <a href="../pages/home.html">Inicio</a>
-            <a href="../pages/home.html">¿Quienes Somos?</a>
-            <a href="http://localhost:3000/productPage" target="pages">Productos</a>
-            <a href="../pages/home.html">Contactanos</a>
-            <% if (login) { %>
-                <h1>Hola! <strong><%= name %></strong></h1>
-                <a href="logout" class="a-logout-mobile">Logout</a>
-            <% } else { %>
-                <h1><strong><%= name %></strong></h1>
-                <a href="login" class="a-logout-mobile">Iniciar sesion</a>
-            <% } %>
+    <!-- Navbar -->
+    <nav class="navbar">
+      <ul class="options-navbar">
+        <li>
+          <a href="/" target="pages">Inicio</a>
+        </li>
+        <li>
+          <a href="productPage" target="pages">Productos</a>
+        </li>
+        <li>
+          <a href="" target="pages">¿Quienes somos?</a>
+        </li>
+        <li>
+          <a href="/" target="pages">Contactanos</a>
+        </li>
+      </ul>
+      <div class="backgrount-search">
+        <label for="product-search" class="txt-search">Busqueda</label>
+        <input type="text" id="product-search" name="product-search" class="lbl-search">
+      </div>
+    </nav>
+  </div>
+
+  <div class="header-mobile">
+    <img class="logo-mobile" src="resources/img/header/img-logo-mobile.png" />
+    <input type="checkbox" id="check">
+    <label for="check" class="mostrar-menu">
+      &#8801
+    </label>
+
+    <nav class="navbar-mobile">
+      <img class="logo-mobile-navbar" src="resources/img/header/img-logo-mobile.png" />
+      <a href="/">- Inicio</a>
+      <a href="/">- ¿Quienes Somos?</a>
+      <a href="productPage" target="pages">- Productos</a>
+      <a href="/">- Contactanos</a>
+      <% if (login) { %>
+        <h1>  Hola! <strong>
+            <%= name %>
+          </strong></h1>
+        <a href="logout" class="a-logout-mobile">Logout</a>
+        <% } else { %>
+          <h1><strong>
+              <%= name %>
+            </strong></h1>
+          <a href="login" class="a-logout-mobile">Iniciar sesion</a>
+          <% } %>
             <label for="check" class="esconder-menu">
-                &#215
+              &#215
             </label>
 
             <div class="info-box-mobile">
-                <div class="info-adress">
-                    <div class="frame-61">
-                        <img class="address-icon" src="resources/img/header/address-icon0.png" />
-                        <div class="frame-60">
-                            <div class="address">Address</div>
-                            <div class="_123-new-york-usa">123, New York, USA</div>
-                        </div>
-                    </div>
+              <div class="info-adress">
+                <div class="frame-61">
+                  <img class="address-icon" src="resources/img/header/address-icon0.png" />
+                  <div class="frame-60">
+                    <div class="address">Address</div>
+                    <div class="_123-new-york-usa">123, New York, USA</div>
+                  </div>
                 </div>
-                <div class="info-phone">
-                    <div class="frame-612">
-                        <img class="phone-icon" src="resources/img/header/phone-icon0.png" />
-                        <div class="frame-60">
-                            <div class="phone-number">Phone Number</div>
-                            <div class="_650-123-1212">(650) 123-1212</div>
-                        </div>
-                    </div>
+              </div>
+              <div class="info-phone">
+                <div class="frame-612">
+                  <img class="phone-icon" src="resources/img/header/phone-icon0.png" />
+                  <div class="frame-60">
+                    <div class="phone-number">Phone Number</div>
+                    <div class="_650-123-1212">(650) 123-1212</div>
+                  </div>
                 </div>
-                <div class="info-email">
-                    <div class="frame-613">
-                        <img class="email-icon" src="resources/img/header/email-icon0.png" />
-                        <div class="frame-60">
-                            <div class="email-us-here">Email Us Here</div>
-                            <div class="example-gmail-com">example@gmail.com</div>
-                        </div>
-                    </div>
+              </div>
+              <div class="info-email">
+                <div class="frame-613">
+                  <img class="email-icon" src="resources/img/header/email-icon0.png" />
+                  <div class="frame-60">
+                    <div class="email-us-here">Email Us Here</div>
+                    <div class="example-gmail-com">example@gmail.com</div>
+                  </div>
                 </div>
+              </div>
             </div>
-        </nav>
-    </div>
+    </nav>
+  </div>
 
-      <!-- Sección Banner -->
+  <!-- Sección Banner -->
   <section id="inicio">
     <section class="section-banner" id="section-banner">
       <div class="slide">
@@ -207,9 +216,9 @@
           </div>
           <p class="detalles" id="detalles"> Dulce de colores muy rico</p>
         </div>
-    </div>
+      </div>
 
-    <a href="product-page/ProductPage.html" class="btn-mas-productos">Ver más productos</a>
+      <a href="productPage" class="btn-mas-productos">Ver más productos</a>
     </div>
   </section>
   <section class="title-Distridulces">
@@ -220,7 +229,7 @@
   <section class="mision" id="section-aboutus">
 
     <div class="txt-content-mision">
-      <img class="imgMision" src="./img/img_mision.png" />
+      <img class="imgMision" src="resources/img/home/img_mision.png" />
       <div class="content-txt-mision">
         <h2 class="txt-title-mision">MISION</h2>
         <p>
@@ -237,7 +246,7 @@
     </div>
 
     <div class="txt-content-vision">
-      <img class="img-vision" src="./img/img_Vision.png" />
+      <img class="img-vision" src="resources/img/home/img_Vision.png" />
       <div class="content-txt-vision">
         <h2 class="txt-title-vision">VISION</h2>
         <p>
@@ -248,14 +257,14 @@
           ola
         </p>
       </div>
-      
-      
+
+
     </div>
   </section>
 
   <!-- Sección valores -->
   <section class="valores">
-    
+
     <div class="txt-content-valores">
       <h2 class="txt-title-valores">VALORES</h2>
       <p>
@@ -265,86 +274,87 @@
         consolidarnos como lideres en ventas y distribución.
       </p>
     </div>
-    <img class="img-valores" src="./img/img_valores.jpg" />
+    <img class="img-valores" src="resources/img/home/img_valores.jpg" />
 
   </section>
 
   <!-- Sección lineacorporativa -->
   <section class="lineacorporativa">
-    
-    <img class="img-lineacorporativa" src="./img/img_lineacorporativa.jpg" />
+
+    <img class="img-lineacorporativa" src="resources/img/home/img_lineacorporativa.jpg" />
     <div class="txt-content-lineacorporativa">
       <h2 class="txt-title-lineacorporativa">LINEA CORPORATIVA</h2>
       <p>
-        Somos un equipo de personas soñadoras y apasionadas que ponemos amor a todo lo que hacemos. 
-        Así, logramos materializar cada anhelo y proyecto en nuestras vidas. si te gusta soñar y hacer 
+        Somos un equipo de personas soñadoras y apasionadas que ponemos amor a todo lo que hacemos.
+        Así, logramos materializar cada anhelo y proyecto en nuestras vidas. si te gusta soñar y hacer
         esos sueños realidad ven y haz parte de la familia Distridulces.
       </p>
     </div>
-    
+
   </section>
 
   <!-- Sección Contáctanos -->
   <section class="contacto" id="contacto">
-    
-      <h2>Contactanos</h2>
-      <p>
-        No dude en comunicarse con nosotros mediante el formulario de contacto a
-        continuación. Estamos aquí para responder cualquier pregunta que pueda tener y
-        brindarle el mejor servicio posible.
-      </p>
-      <!-- Formulario de contacto -->
 
-      <form action="https://formsubmit.co/sebgameover5@gmail.com" method="POST">
+    <h2>Contactanos</h2>
+    <p>
+      No dude en comunicarse con nosotros mediante el formulario de contacto a
+      continuación. Estamos aquí para responder cualquier pregunta que pueda tener y
+      brindarle el mejor servicio posible.
+    </p>
+    <!-- Formulario de contacto -->
 
-        <table>
-            <tr>
-                <td>
-                    <input class="lbl-nombre" type="text" name="name" id="name" placeholder="NOMBRE">
-                </td>
-                <td>
-                    <input class="lbl-telefono" type="tel" name="phone" id="phone" placeholder="TELEFONO">
-                </td>
-            </tr>
-            <tr>
-                <td colspan="2">
-                    <input class="lbl-correo" type="email" name="email" id="email" placeholder="CORREO">
-                </td>
-            </tr>
-            <tr>
-                <td colspan="2">
-                    <textarea class="lbl-mensaje" name="message" id="message" placeholder="MENSAJE"></textarea>
-                </td>
-            </tr>
-        </table>
-    
-        <input class="enviar-contact" type="submit" value="Enviar">
-    
-        <input type="hidden" name="_next" value="http://127.0.0.1:5501/">
-        <input type="hidden" name="_captcha" value="false">
-    </form> 
+    <form action="https://formsubmit.co/sebgameover5@gmail.com" method="POST">
+
+      <table>
+        <tr>
+          <td>
+            <input class="lbl-nombre" type="text" name="name" id="name" placeholder="NOMBRE">
+          </td>
+          <td>
+            <input class="lbl-telefono" type="tel" name="phone" id="phone" placeholder="TELEFONO">
+          </td>
+        </tr>
+        <tr>
+          <td colspan="2">
+            <input class="lbl-correo" type="email" name="email" id="email" placeholder="CORREO">
+          </td>
+        </tr>
+        <tr>
+          <td colspan="2">
+            <textarea class="lbl-mensaje" name="message" id="message" placeholder="MENSAJE"></textarea>
+          </td>
+        </tr>
+      </table>
+
+      <input class="enviar-contact" type="submit" value="Enviar">
+
+      <input type="hidden" name="_next" value="http://127.0.0.1:5501/">
+      <input type="hidden" name="_captcha" value="false">
+    </form>
   </section>
 
   <footer>
     <div class="footer">
-        <div class="social-icons">
-            <a href=""><img class="img-instagram" src="resources/img/footer/img-instagram0.png" /></a>
-            <a href=""><img class="img-facebook" src="resources/img/footer/img-facebook0.png" /></a>
-            <a href=""><img class="img-whatapp" src="resources/img/footer/img-whatapp0.png" /></a>
+      <div class="social-icons">
+        <a href=""><img class="img-instagram" src="resources/img/footer/img-instagram0.png" /></a>
+        <a href=""><img class="img-facebook" src="resources/img/footer/img-facebook0.png" /></a>
+        <a href=""><img class="img-whatapp" src="resources/img/footer/img-whatapp0.png" /></a>
+      </div>
+      <div class="txt-futer">
+        <div class="txt-copy">© 2024 - DISTRIDULCES.</div>
+        <div class="txt-footers">
+          <a href="" class="txt-footer1">Politicas</a>
+          <a href="" class="txt-footer2">Terminos y condiciones</a>
+          <a href="" class="txt-footer3">Contactanos</a>
+          <a href="" class="txt-footer4">Ubicanos</a>
+          <a href="" class="txt-footer5">Productos</a>
+          <a href="" class="txt-footer6">Quienes somos</a>
         </div>
-        <div class="txt-futer">
-            <div class="txt-copy">© 2024 - DISTRIDULCES.</div>
-            <div class="txt-footers">
-                <a href="" class="txt-footer1">Politicas</a>
-                <a href="" class="txt-footer2">Terminos y condiciones</a>
-                <a href="" class="txt-footer3">Contactanos</a>
-                <a href="" class="txt-footer4">Ubicanos</a>
-                <a href="" class="txt-footer5">Productos</a>
-                <a href="" class="txt-footer6">Quienes somos</a>
-            </div>
-        </div>
-        <img class="img-logo" src="resources/img/footer/img-logo0.png" />
+      </div>
+      <img class="img-logo" src="resources/img/footer/img-logo0.png" />
     </div>
-</footer>
+  </footer>
 </body>
+
 </html>
