--- a/views/indexcrud.ejs
+++ b/views/indexcrud.ejs
@@ -60,13 +60,13 @@
                     <a href="/" target="pages">Inicio</a>
                 </li>
                 <li>
-                    <a href="http://localhost:3000/crud" target="pages">Productos</a>
+                    <a href="crud" target="pages">Productos</a>
                 </li>
                 <li>
                     <a href="/" target="pages">¿Quienes somos?</a>
                 </li>
                 <li>
-                    <a href="resources/pages/home.html#contacto" target="pages">Contactanos</a>
+                    <a href="/" target="pages">Contactanos</a>
                 </li>
             </ul>
             <div class="backgrount-search">
@@ -84,13 +84,13 @@
         </label>
 
         <nav class="navbar-mobile">
+            <h1>Hola! <strong><%= name %></strong></h1>
             <img class="logo-mobile-navbar" src="resources/img/header/img-logo-mobile.png" />
-            <a href="../pages/home.html">Inicio</a>
-            <a href="../pages/home.html">¿Quienes Somos?</a>
-            <a href="http://localhost:3000/productPage" target="pages">Productos</a>
-            <a href="../pages/home.html">Contactanos</a>
-            <% if (login) { %>
-                <h1>Hola! <strong><%= name %></strong></h1>
+            <a href="/">- Inicio</a>
+            <a href="/">- ¿Quienes Somos?</a>
+            <a href="crud" target="pages">- Productos</a>
+            <a href="/">- Contactanos</a>
+            <% if (login) { %>    
                 <a href="logout" class="a-logout-mobile">Logout</a>
             <% } else { %>
                 <h1><strong><%= name %></strong></h1>
@@ -203,9 +203,10 @@
         </div>
     </div>
 
-    <a href="product-page/ProductPage.html" class="btn-mas-productos">Ver más productos</a>
+    <a href="productPage" class="btn-mas-productos">Ver más productos</a>
     </div>
   </section>
+
   <section class="title-Distridulces">
     DISTRIDULCES
   </section>
@@ -214,7 +215,7 @@
   <section class="mision" id="section-aboutus">
 
     <div class="txt-content-mision">
-      <img class="imgMision" src="./img/img_mision.png" />
+      <img class="imgMision" src="resources/img/home/img_mision.png" />
       <div class="content-txt-mision">
         <h2 class="txt-title-mision">MISION</h2>
         <p>
@@ -231,7 +232,7 @@
     </div>
 
     <div class="txt-content-vision">
-      <img class="img-vision" src="./img/img_Vision.png" />
+      <img class="img-vision" src="resources/img/home/img_Vision.png"/>
       <div class="content-txt-vision">
         <h2 class="txt-title-vision">VISION</h2>
         <p>
@@ -259,14 +260,14 @@
         consolidarnos como lideres en ventas y distribución.
       </p>
     </div>
-    <img class="img-valores" src="./img/img_valores.jpg" />
+    <img class="img-valores" src="resources/img/home/img_valores.jpg" />
 
   </section>
 
   <!-- Sección lineacorporativa -->
   <section class="lineacorporativa">
     
-    <img class="img-lineacorporativa" src="./img/img_lineacorporativa.jpg" />
+    <img class="img-lineacorporativa" src="resources/img/home/img_lineacorporativa.jpg" />
     <div class="txt-content-lineacorporativa">
       <h2 class="txt-title-lineacorporativa">LINEA CORPORATIVA</h2>
       <p>
