--- a/views/productPage.ejs
+++ b/views/productPage.ejs
@@ -56,16 +56,16 @@
         <nav class="navbar">
           <ul class="options-navbar">
             <li>
-              <a href="/" target="pages">Inicio</a>
+              <a href="/">Inicio</a>
             </li>
             <li>
-              <a href="productPage" target="pages">Productos</a>
+              <a href="/productPage">Productos</a>
             </li>
             <li>
-              <a href="" target="pages">¿Quienes somos?</a>
+              <a href="/#title-Distridulces">¿Quienes somos?</a>
             </li>
             <li>
-              <a href="/" target="pages">Contactanos</a>
+              <a href="/#contacto">Contactanos</a>
             </li>
           </ul>
           <div class="backgrount-search">
@@ -86,7 +86,7 @@
           <img class="logo-mobile-navbar" src="resources/img/header/img-logo-mobile.png" />
           <a href="/">- Inicio</a>
           <a href="/">- ¿Quienes Somos?</a>
-          <a href="productPage" target="pages">- Productos</a>
+          <a href="productPage" >- Productos</a>
           <a href="/">- Contactanos</a>
                 <label for="check" class="esconder-menu">
                   &#215
