--- a/views/indexcrud.ejs
+++ b/views/indexcrud.ejs
@@ -57,16 +57,16 @@
         <nav class="navbar">
             <ul class="options-navbar">
                 <li>
-                    <a href="/" target="pages">Inicio</a>
+                    <a href="/" >Inicio</a>
                 </li>
                 <li>
-                    <a href="crud" target="pages">Productos</a>
+                    <a href="/crud" >Productos</a>
                 </li>
                 <li>
-                    <a href="/" target="pages">¿Quienes somos?</a>
+                    <a href="/#title-Distridulces" >¿Quienes somos?</a>
                 </li>
                 <li>
-                    <a href="/" target="pages">Contactanos</a>
+                    <a href="/#contacto" >Contactanos</a>
                 </li>
             </ul>
             <div class="backgrount-search">
@@ -88,7 +88,7 @@
             <img class="logo-mobile-navbar" src="resources/img/header/img-logo-mobile.png" />
             <a href="/">- Inicio</a>
             <a href="/">- ¿Quienes Somos?</a>
-            <a href="crud" target="pages">- Productos</a>
+            <a href="crud" >- Productos</a>
             <a href="/">- Contactanos</a>
             <% if (login) { %>    
                 <a href="logout" class="a-logout-mobile">Logout</a>
@@ -150,58 +150,39 @@
     <h2 class="title-productos">PRODUCTOS DE ALTA CALIDAD</h2>
 
     <div class="slider-mobile">
-      <div class="fila">
-        <div class="item" onclick="cargar(this)">
-          <div class="contenedor-foto">
-            <img src="img/img-card1.png" alt="">
-          </div>
-          <div class="contenedor-texto">
-            <p class="descripcion">Barrilete</p>
-            <span class="precio">$ 5.300</span>
-          </div>
-          <p class="detalles" id="detalles"> Dulce de colores muy rico</p>
-        </div>
-        <div class="item" onclick="cargar(this)">
-          <div class="contenedor-foto">
-            <img src="img/img-card1.png" alt="">
-          </div>
-          <div class="contenedor-texto">
-            <p class="descripcion">Barrilete</p>
-            <span class="precio">$ 5.300</span>
-          </div>
-          <p class="detalles" id="detalles"> Dulce de colores muy rico</p>
-        </div>
-        <div class="item" onclick="cargar(this)">
-          <div class="contenedor-foto">
-            <img src="img/img-card1.png" alt="">
-          </div>
-          <div class="contenedor-texto">
-            <p class="descripcion">Barrilete</p>
-            <span class="precio">$ 5.300</span>
-          </div>
-          <p class="detalles" id="detalles"> Dulce de colores muy rico</p>
-        </div>
-        <div class="item" onclick="cargar(this)">
-          <div class="contenedor-foto">
-            <img src="img/img-card1.png" alt="">
-          </div>
-          <div class="contenedor-texto">
-            <p class="descripcion">Barrilete</p>
-            <span class="precio">$ 5.300</span>
-          </div>
-          <p class="detalles" id="detalles"> Dulce de colores muy rico</p>
-        </div>
-        <div class="item" onclick="cargar(this)">
-          <div class="contenedor-foto">
-            <img src="img/img-card1.png" alt="">
-          </div>
-          <div class="contenedor-texto">
-            <p class="descripcion">Barrilete</p>
-            <span class="precio">$ 5.300</span>
-          </div>
-          <p class="detalles" id="detalles"> Dulce de colores muy rico</p>
-        </div>
-    </div>
+      <section class="contenido" id="contenido">
+        <% Object.entries(productosPorCategoria).forEach(([categoria, productos])=> { %>
+            <div class="category-section">
+                <h2>
+                    <%= categoria %>
+                </h2>
+
+            </div>
+
+            <div class="mostrador" id="mostrador">
+                <% productos.forEach(producto=> { %>
+                    <div class="item"
+                        onclick="cargar(this, '<%= producto.nombre %>','<%= producto.descripcion %>','<%= producto.precio %>')">
+                        <div class="contenedor-foto">
+                            <img src="data:image/jpeg;base64,<%= Buffer.from(producto.imagen).toString('base64') %>"
+                                alt="<%= producto.nombre %>">
+                        </div>
+                        <div class="contenedor-texto">
+                            <p class="nombre">
+                                <%= producto.nombre %>
+                            </p>
+                            <p class="descripcion">
+                                <%= producto.descripcion %>
+                            </p>
+                            <span class="precio">
+                                $<%= producto.precio %>
+                            </span>
+                        </div>
+                    </div>
+                    <% }); %>
+            </div>
+            <% }); %>
+    </section>
 
     <a href="productPage" class="btn-mas-productos">Ver más productos</a>
     </div>
